Update to .net 4.0 and add system.server tags in webconfig

--- a/WebSample/Web.config
+++ b/WebSample/Web.config
@@ -11,4 +11,10 @@
     </httpHandlers>
     <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
+  <system.webServer>
+    <validation validateIntegratedModeConfiguration="false"/>
+    <handlers>
+      <add name="captcha" verb="GET" path="/captcha/" type="PersianCaptchaHandler.CaptchaHandler, PersianCaptchaHandler, Version=1.0.0.0, Culture=neutral"/>
+    </handlers>
+  </system.webServer>
 </configuration>
