--- a/PersianCaptcha/PersianCaptchaHandler.csproj
+++ b/PersianCaptcha/PersianCaptchaHandler.csproj
@@ -38,16 +38,18 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="CaptchaHandler.cs" />
-    <Compile Include="Utils.cs" />
-    <Compile Include="NumberToString.cs" />
-    <Compile Include="RandomGenerator.cs" />
-    <Compile Include="Encryptor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj">
+      <Project>{b9270493-c27a-4489-9c8a-84370fe4684d}</Project>
+      <Name>Infrastructure</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
